--- a/netflix-Movie/src/main/resources/application.properties
+++ b/netflix-Movie/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 password=mysql
 url=jdbc:mysql://localhost:3306/netflix-film?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+username=root
 
 spring.liquibase.change-log=classpath:/db/changelog/dbChangeLog.xml
 
